--- a/app/src/main/res/layout/item_github.xml
+++ b/app/src/main/res/layout/item_github.xml
@@ -1,6 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -86,7 +84,7 @@
 
 
         <androidx.appcompat.widget.AppCompatImageView
-
+            android:id="@+id/avatarImg"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:background="@drawable/circle"
@@ -119,7 +117,6 @@
         app:layout_constraintLeft_toLeftOf="@+id/username"
         app:layout_constraintRight_toRightOf="@+id/username"
         app:layout_constraintTop_toBottomOf="@+id/username" />
-
 
     <View
         android:id="@+id/line"
