--- a/app/src/main/res/layout/item_github.xml
+++ b/app/src/main/res/layout/item_github.xml
@@ -2,22 +2,23 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="20dp">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/nameRepository"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
+        android:layout_marginStart="25dp"
         android:text="nameRepository"
         android:textColor="@color/blue"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/discretion"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/avatar"
+        app:layout_constraintRight_toLeftOf="@+id/avatar"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.AppCompatTextView
@@ -59,12 +60,15 @@
         android:src="@drawable/ic_star"
         app:layout_constraintBottom_toBottomOf="@+id/branch"
         app:layout_constraintLeft_toRightOf="@+id/branch"
+        app:layout_constraintRight_toLeftOf="@+id/like"
         app:layout_constraintTop_toTopOf="@+id/branch" />
 
     <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/like"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
+        android:inputType="number"
         android:text="like"
         app:layout_constraintBottom_toBottomOf="@+id/ic_star"
         app:layout_constraintLeft_toRightOf="@+id/ic_star"
@@ -75,20 +79,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:elevation="0dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="30dp"
+        android:elevation="2dp"
         app:cardCornerRadius="50dp"
         app:layout_constraintBottom_toTopOf="@+id/username"
         app:layout_constraintLeft_toRightOf="@+id/nameRepository"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/nameRepository">
+        app:layout_constraintTop_toTopOf="parent">
 
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/avatarImg"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:background="@drawable/circle"
-            android:elevation="2dp"
+            android:elevation="3dp"
             tools:srcCompat="@tools:sample/avatars" />
 
     </androidx.cardview.widget.CardView>
